--- a/admin/config.yml
+++ b/admin/config.yml
@@ -32,3 +32,17 @@ logo_url: https://decapbridge.com/decapcms-with-bridge.svg
 site_url: https://unna-bageri-kafe.netlify.app
 
 media_folder: "img/uploads" # Media files will be stored in the repo under img/uploads
+
+collections:
+  - name: "menu" # Used in routes, e.g., /admin/collections/blog
+    label: "Menu" # Used in the UI
+    folder: "_posts/menu" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Featured Image", name: "thumbnail", widget: "image" }
+      - { label: "Rating (scale of 1-5)", name: "rating", widget: "number" }
+      - { label: "Body", name: "body", widget: "markdown" }
